--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 </head>
 <body>
     
-    <h1>Materias</h1>
-    <hr>
+    <div>ENCABEZADO</div>
+    <div>
+        <h1>Sistema de ventas de Ropa</h1>
+    </div>
 
-    <ul>
-        <li> <a href="/pdf/formatos.html">Formatos</a></li>
-        <li> <a href="/ejercicio1.php">Ejercicio 1</a></li>
-        <li> <a href="/ejercicio2.php">Ejercicio 2</a></li>
-
-
-    </ul>
+    <div>
+        Pie de pagina
+        <hr>
+    </div>
 </body>
 </html>
