--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index principal</title>
+    <title>Sistema de ventas</title>
 </head>
 <body>
     
     <div>ENCABEZADO</div>
+    <div><ul>
+        <li>Camisas</li>
+        <li>Pantalones</li>
+        <li>Playeras</li>
+        <li>Cintos</li>
+    </ul></div>
     <div>
         <h1>Sistema de ventas de Ropa</h1>
     </div>
