--- a/index.html
+++ b/index.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de ventas</title>
+
 </head>
 <body>
     
-    <div>ENCABEZADO</div>
-    <div><ul>
-        <li>Camisas</li>
-        <li>Pantalones</li>
-        <li>Playeras</li>
-        <li>Cintos</li>
-    </ul></div>
-    <div>
         <h1>Sistema de ventas de Ropa</h1>
     </div>
 
+    <div>Sistema de ropa</div>
+    <div><ul>
+        <li> <a href="/camisas/camisas.html" target="contenedor">Camisas</a></li>
+        <li> <a href="/pantalon/pantalon.html" target="contenedor">Pantalon</a></li>
+        <li> <a href="/playeras/playeras.html" target="contenedor">Playeras</a></li>
+    </ul></div>
     <div>
-        Pie de pagina
-        <hr>
+
+    <div>
+        <iframe src="/inicio.html" frameborder="0" name="contenedor" style="width: 800px; height: 400px;"></iframe>
+
     </div>
+    <div>
+        <a href="https://walmart.com" target="_blank">Walmart</a>
+    </div>
+
+
+
 </body>
 </html>
